# sky_pro_final_project

./: .coverage  .env  .gitignore  1.txt  README.md  pyproject.toml
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_entry_image.py  0003_entry_view_counter.py
diary/templates/diary/: base.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
diary/templates/diary/includes/: inc_menu.html
staticfiles/css/: style.css
users/: admin.py  forms.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/registration/: login.html
users/templates/users/: reset_password.html  user_form.html
