[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["79096 <a.malakhinsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
django = "4.2.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
pytest = "^8.3.4"
pytest-django = "^4.9.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
